--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-grid-layout": "^1.4.4",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.26.1",
     "sass": "^1.78.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/packery": "^1.4.37",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-grid-layout": "^1.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
