--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "html-react-parser": "^5.1.16",
+    "@vercel/node": "^3.2.14",
+    "formik": "^2.4.6",
+    "nodemailer": "^6.9.15",
     "react-dom": "^18.3.1",
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.26.1",
-    "sass": "^1.78.0"
+    "sass": "^1.78.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/node": "^22.5.5",
+    "@types/nodemailer": "^6.4.16",
     "@types/packery": "^1.4.37",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
