--- a/src/data/projectsData.json
+++ b/src/data/projectsData.json
@@ -3,7 +3,7 @@
     {
       "id": 1,
       "title": "Piatto ristorante Italiano",
-      "category": "Diseño gráfico",
+      "category": "graphic-design",
       "image": "../../src/assets/images/graphic-design/corporate-identity/piatto-restaurante/identidadPiatto.jpg",
       "description": "",
       "year": 2011,
@@ -14,7 +14,7 @@
     {
       "id": 2,
       "title": "Revista GrafiK",
-      "category": "Diseño gráfico",
+      "category": "graphic-design",
       "image": "../../src/assets/images/graphic-design/editorial/revista-grafik/revistaGauckler.jpg",
       "description": "",
       "year": 2012,
@@ -25,7 +25,7 @@
     {
       "id": 3,
       "title": "Folleto Cámara de comercio de Bilbao",
-      "category": "Diseño gráfico",
+      "category": "graphic-design",
       "image": "../../src/assets/images/graphic-design/advertising/brochures/camara-comercio-bilbao/camara-comercio-bilbao.jpg",
       "description": "",
       "year": 2012,
@@ -36,7 +36,7 @@
     {
       "id": 4,
       "title": "Folleto Colonias 2010",
-      "category": "Diseño gráfico",
+      "category": "graphic-design",
       "image": "../../src/assets/images/graphic-design/advertising/brochures/colonias/coloniasInterior.jpg",
       "description": "",
       "year": 2012,
@@ -47,7 +47,7 @@
     {
       "id": 5,
       "title": "Folleto Exponatur",
-      "category": "Diseño gráfico",
+      "category": "graphic-design",
       "image": "../../src/assets/images/graphic-design/advertising/brochures/exponatur/expoNaturCastellano.jpg",
       "description": "",
       "year": 2014,
@@ -58,7 +58,7 @@
     {
       "id": 6,
       "title": "Óptica Pop eye",
-      "category": "Diseño gráfico",
+      "category": "graphic-design",
       "image": "../../src/assets/images/graphic-design/corporate-identity/pop-eye/popEye-logo.jpg",
       "description": "",
       "year": 2013,
@@ -69,7 +69,7 @@
     {
       "id": 7,
       "title": "Pack Zensación",
-      "category": "Diseño gráfico",
+      "category": "graphic-design",
       "image": "../../src/assets/images/graphic-design/corporate-identity/zensacion/montaje-zensacion.jpg",
       "description": "",
       "year": 2015,
@@ -80,7 +80,7 @@
     {
       "id": 8,
       "title": "Bodegas Ubide",
-      "category": "Diseño gráfico",
+      "category": "graphic-design",
       "image": "../../src/assets/images/graphic-design/corporate-identity/bodegas-ubide/papeleria-bodegas-ubide.jpg",
       "description": "",
       "year": 2012,
@@ -91,7 +91,7 @@
     {
       "id": 9,
       "title": "Anuncios publicitarios",
-      "category": "Diseño gráfico",
+      "category": "graphic-design",
       "image": "../../src/assets/images/graphic-design/advertising/advertisements/advertisements.jpg",
       "description": "",
       "year": 2012,
@@ -102,7 +102,7 @@
     {
       "id": 10,
       "title": "Carteles Aste nagusia y Jazzaldia",
-      "category": "Diseño gráfico",
+      "category": "graphic-design",
       "image": "../../src/assets/images/graphic-design/advertising/posters/carteles-jazzaldia-aste-nagusia.jpg",
       "description": "",
       "year": 2013,
@@ -113,7 +113,7 @@
     {
       "id": 11,
       "title": "Landing GasNature",
-      "category": "Diseño web",
+      "category": "web-design",
       "image": "../../src/assets/images/web-design/gasnature-landing.jpg",
       "description": "",
       "year": 2017,
@@ -124,7 +124,7 @@
     {
       "id": 12,
       "title": "Landing TCS",
-      "category": "Diseño web",
+      "category": "web-design",
       "image": "../../src/assets/images/web-design/tcs.jpg",
       "description": "",
       "year": 2017,
@@ -135,7 +135,7 @@
     {
       "id": 13,
       "title": "Landing traductor Itzulpen",
-      "category": "Diseño web",
+      "category": "web-design",
       "image": "../../src/assets/images/web-design/traductor-web-itzulpen.png",
       "description": "",
       "year": 2018,
@@ -146,7 +146,7 @@
     {
       "id": 14,
       "title": "Web Araex",
-      "category": "Diseño web",
+      "category": "web-design",
       "image": "../../src/assets/images/web-design/araex/home-araex.png",
       "description": "",
       "year": 2013,
@@ -157,7 +157,7 @@
     {
       "id": 15,
       "title": "Floristeria Kimu Loradenda",
-      "category": "Desarrollo web",
+      "category": "web-development",
       "image": "../../src/assets/images/web-develop/kimuloradenda/kimuloradenda-header.jpg",
       "description": "",
       "year": 2013,
@@ -168,7 +168,7 @@
     {
       "id": 16,
       "title": "Vipernake",
-      "category": "Desarrollo web",
+      "category": "web-development",
       "image": "../../src/assets/images/web-develop/vipernake/vipernake-web.jpg",
       "description": "",
       "year": 2021,
