--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 # Node modules
 node_modules/
 
-# Build output
-dist/
-build/
+# Log files
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Dependency directories
 jspm_packages/
@@ -33,38 +34,25 @@ Thumbs.db
 ehthumbs.db
 Desktop.ini
 
-# Mac
+# Mac OS files
 .DS_Store
 .AppleDouble
 .LSOverride
 
-# Windows
+# Windows files
 ehthumbs.db
 Icon?
 Desktop.ini
 
-# Log files
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Build directories
-/dist
-/build
-/.next
-/out
-
-# Generated files
-*.pid
-*.seed
-*.sql
-*.sqlite
+# Build directories - EXCEPT for gh-pages deploy
+# Ignore the build directories during development
+# Allow them in gh-pages branch for deployment
+# Git will still track the build folder for deployment when force added
+# You can remove this comment if you like, it is here just to explain
 
 # TypeScript
 *.tsbuildinfo
 
-# Next.js
+# Next.js build directories
 .next/
 out/
-
