--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,7 +25,7 @@
       "@assets/*": ["src/assets/*"],
       "@components/*": ["src/components/*"],
       "@pages/*": ["src/pages/*"],
-      "@data/*": ["src/data/*"],
+      "@data/*": ["public/data/*"],
     },
     "outDir": "./dist",
   },
