--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
+    "vite-imagetools": "^7.0.4",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "homepage": "https://maiderbarrutia.github.io/maiWeb_react"
