--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,22 @@
 {
+  "version": 2,
   "builds": [
     {
-      "src": "api/sendMail.ts",
+      "src": "src/**/*",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    },
+    {
+      "src": "api/**/*.ts",
       "use": "@vercel/node"
     }
   ],
-  "scripts": {
-    "build": "vite build"
-  }
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    }
+  ]
 }
