--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
     "@vercel/node": "^2.10.3",
+    "axios": "^1.7.7",
     "formik": "^2.4.6",
     "nodemailer": "^6.9.15",
     "react-dom": "^18.3.1",
@@ -53,6 +55,5 @@
     "vite": "^5.4.1",
     "vite-imagetools": "^7.0.4",
     "vite-tsconfig-paths": "^5.0.1"
-  },
-  "homepage": "https://maiderbarrutia.github.io/maiWeb_react"
+  }
 }
