--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,10 +16,10 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": false,  //Solo lo he cambiado porque da error al hacer build si tengo los testing (es true)
+    "noUnusedLocals": false,  //Solo cambiar al hacer build porque da error si tengo los testing (es true por defecto)
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "baseUrl": ".",   // Establece la carpeta base (el root del proyecto)
+    "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
       "@assets/*": ["src/assets/*"],
@@ -29,5 +29,8 @@
     },
     "outDir": "./dist",
   },
-  "include": ["src"]
+  "include": [
+    "api/**/*",
+    "src/**/*"
+  ]
 }
