--- a/data/projectsData.json
+++ b/data/projectsData.json
@@ -3,177 +3,308 @@
     {
       "id": 1,
       "title": "Piatto ristorante Italiano",
-      "category": "graphic-design",
-      "image": "images/graphic-design/corporate-identity/piatto-restaurante/identidadPiatto.jpg",
-      "description": "",
+      "category": "Diseño gráfico",
+      "client": "",
+      "specialty": "Identidad corporativa",
+      "technologies":["Photoshop"],
+      "mainImage": "images/graphic-design/corporate-identity/piatto-restaurante/identidadPiatto.jpg",
+      "images": [
+        "images/graphic-design/corporate-identity/piatto-restaurante/identidadPiatto.jpg",
+        "images/graphic-design/corporate-identity/piatto-restaurante/anuncioPrensaPiatto.png",
+        "images/graphic-design/corporate-identity/piatto-restaurante/logoPiatto.jpg",
+        "images/graphic-design/corporate-identity/piatto-restaurante/logoPiattoBlancoNegro.jpg",
+        "images/graphic-design/corporate-identity/piatto-restaurante/stufferPiatto.jpg"
+      ],
+      "description": "Lorem ipsum dolor sit amet consectetur adipiscing elit turpis lacinia mus, luctus aenean tellus pellentesque imperdiet velit gravida cras semper donec, quisque et nostra dis enim diam lobortis mi lacus. Tortor venenatis ultricies nec egestas suscipit fusce diam luctus pulvinar, varius nulla est dictum scelerisque a velit laoreet felis, parturient sollicitudin magnis himenaeos gravida sociis euismod pellentesque. Dui proin orci vitae semper tortor ut porttitor sollicitudin, dignissim commodo euismod enim ultrices posuere vehicula scelerisque, eu in mi cubilia nam fusce ligula.",
       "year": 2011,
       "link": "../../src/pages/projects/projectDetails.tsx",
       "slug": "identidad-restaurante-piatto",
+      "url" : "https://github.com/maiderbarrutia",
       "isPrivate": false
     },
     {
       "id": 2,
       "title": "Revista GrafiK",
-      "category": "graphic-design",
-      "image": "images/graphic-design/editorial/revista-grafik/revistaGauckler.jpg",
+      "category": "Diseño gráfico",
+      "client": "",
+      "specialty": "",
+      "technologies":[],
+      "mainImage": "images/graphic-design/editorial/revista-grafik/revistaGauckler.jpg",
+      "images": [
+        "",
+        ""
+      ],
       "description": "",
       "year": 2012,
       "link": "../../src/pages/projects/projectDetails.tsx",
       "slug": "revista-grafik",
+      "url" : "",
       "isPrivate": false
     },
     {
       "id": 3,
       "title": "Folleto Cámara de comercio de Bilbao",
-      "category": "graphic-design",
-      "image": "images/graphic-design/camara-comercio-bilbao/camara-comercio-bilbao.jpg",
+      "category": "Diseño gráfico",
+      "client": "",
+      "specialty": "",
+      "technologies":[],
+      "mainImage": "images/graphic-design/camara-comercio-bilbao/camara-comercio-bilbao.jpg",
+      "images": [
+        "",
+        ""
+      ],
       "description": "",
       "year": 2012,
       "link": "../../src/pages/projects/projectDetails.tsx",
       "slug": "folleto-camara-comercio-bilbao",
+      "url" : "",
       "isPrivate": false
     },
     {
       "id": 4,
       "title": "Folleto Colonias 2010",
-      "category": "graphic-design",
-      "image": "images/graphic-design/colonias/coloniasInterior.jpg",
+      "category": "Diseño gráfico",
+      "client": "",
+      "specialty": "",
+      "technologies":[],
+      "mainImage": "images/graphic-design/colonias/coloniasInterior.jpg",
+      "images": [
+        "",
+        ""
+      ],
       "description": "",
       "year": 2012,
       "link": "../../src/pages/projects/projectDetails.tsx",
       "slug": "folleto-colonias-2010",
+      "url" : "",
       "isPrivate": false
     },
     {
       "id": 5,
       "title": "Folleto Exponatur",
-      "category": "graphic-design",
-      "image": "images/graphic-design/exponatur/expoNaturCastellano.jpg",
+      "category": "Diseño gráfico",
+      "client": "",
+      "specialty": "",
+      "technologies":[],
+      "mainImage": "images/graphic-design/exponatur/expoNaturCastellano.jpg",
+      "images": [
+        "",
+        ""
+      ],
       "description": "",
       "year": 2014,
       "link": "../../src/pages/projects/projectDetails.tsx",
       "slug": "folleto-exponatur",
+      "url" : "",
       "isPrivate": true
     },
     {
       "id": 6,
       "title": "Óptica Pop eye",
-      "category": "graphic-design",
-      "image": "images/graphic-design/corporate-identity/pop-eye/popEye-logo.jpg",
+      "category": "Diseño gráfico",
+      "client": "",
+      "specialty": "",
+      "technologies":[],
+      "mainImage": "images/graphic-design/corporate-identity/pop-eye/popEye-logo.jpg",
+      "images": [
+        "",
+        ""
+      ],
       "description": "",
       "year": 2013,
       "link": "../../src/pages/projects/projectDetails.tsx",
       "slug": "optica-pop-eye",
+      "url" : "",
       "isPrivate": false
     },
     {
       "id": 7,
       "title": "Pack Zensación",
-      "category": "graphic-design",
-      "image": "images/graphic-design/corporate-identity/zensacion/montaje-zensacion.jpg",
+      "category": "Diseño gráfico",
+      "client": "",
+      "specialty": "",
+      "technologies":[],
+      "mainImage": "images/graphic-design/corporate-identity/zensacion/montaje-zensacion.jpg",
+      "images": [
+        "",
+        ""
+      ],
       "description": "",
       "year": 2015,
       "link": "../../src/pages/projects/projectDetails.tsx",
       "slug": "pack-zensacion",
+      "url" : "",
       "isPrivate": false
     },
     {
       "id": 8,
       "title": "Bodegas Ubide",
-      "category": "graphic-design",
-      "image": "images/graphic-design/corporate-identity/bodegas-ubide/papeleria-bodegas-ubide.jpg",
+      "category": "Diseño gráfico",
+      "client": "",
+      "specialty": "",
+      "technologies":[],
+      "mainImage": "images/graphic-design/corporate-identity/bodegas-ubide/papeleria-bodegas-ubide.jpg",
+      "images": [
+        "",
+        ""
+      ],
       "description": "",
       "year": 2012,
       "link": "../../src/pages/projects/projectDetails.tsx",
       "slug": "bodegas-ubide",
+      "url" : "",
       "isPrivate": false
     },
     {
       "id": 9,
       "title": "Anuncios publicitarios",
-      "category": "graphic-design",
-      "image": "images/graphic-design/advertising/advertisements/advertisements.jpg",
+      "category": "Diseño gráfico",
+      "client": "",
+      "specialty": "",
+      "technologies":[],
+      "mainImage": "images/graphic-design/advertising/advertisements/advertisements.jpg",
+      "images": [
+        "",
+        ""
+      ],
       "description": "",
       "year": 2012,
       "link": "../../src/pages/projects/projectDetails.tsx",
       "slug": "anuncios-publicitarios",
+      "url" : "",
       "isPrivate": false
     },
     {
       "id": 10,
       "title": "Carteles Aste nagusia y Jazzaldia",
-      "category": "graphic-design",
-      "image": "images/graphic-design/advertising/posters/carteles-jazzaldia-aste-nagusia.jpg",
+      "category": "Diseño gráfico",
+      "client": "",
+      "specialty": "",
+      "technologies":[],
+      "mainImage": "images/graphic-design/advertising/posters/carteles-jazzaldia-aste-nagusia.jpg",
+      "images": [
+        "",
+        ""
+      ],
       "description": "",
       "year": 2013,
       "link": "../../src/pages/projects/projectDetails.tsx",
       "slug": "carteles-aste-nagusia-jazzaldia",
+      "url" : "",
       "isPrivate": false
     },
     {
       "id": 11,
       "title": "Landing GasNature",
-      "category": "web-design",
-      "image": "images/web-design/gasnature-landing.jpg",
+      "category": "Diseño web",
+      "client": "",
+      "specialty": "",
+      "technologies":[],
+      "mainImage": "images/web-design/gasnature-landing.jpg",
+      "images": [
+        "",
+        ""
+      ],
       "description": "",
       "year": 2017,
       "link": "../../src/pages/projects/projectDetails.tsx",
       "slug": "landing-gasNature",
+      "url" : "",
       "isPrivate": false
     },
     {
       "id": 12,
       "title": "Landing TCS",
-      "category": "web-design",
-      "image": "images/web-design/tcs.jpg",
+      "category": "Diseño web",
+      "client": "",
+      "specialty": "",
+      "technologies":[],
+      "mainImage": "images/web-design/tcs.jpg",
+      "images": [
+        "",
+        ""
+      ],
       "description": "",
       "year": 2017,
       "link": "../../src/pages/projects/projectDetails.tsx",
       "slug": "landing-tcs",
+      "url" : "",
       "isPrivate": false
     },
     {
       "id": 13,
       "title": "Landing traductor Itzulpen",
-      "category": "web-design",
-      "image": "images/web-design/traductor-web-itzulpen.png",
+      "category": "Diseño web",
+      "client": "",
+      "specialty": "",
+      "technologies":[],
+      "mainImage": "images/web-design/traductor-web-itzulpen.png",
+      "images": [
+        "",
+        ""
+      ],
       "description": "",
       "year": 2018,
       "link": "../../src/pages/projects/projectDetails.tsx",
       "slug": "landing-traductor-itzulpen",
+      "url" : "",
       "isPrivate": false
     },
     {
       "id": 14,
       "title": "Web Araex",
-      "category": "web-design",
-      "image": "images/web-design/araex/home-araex.png",
+      "category": "Diseño web",
+      "client": "",
+      "specialty": "",
+      "technologies":[],
+      "mainImage": "images/web-design/araex/home-araex.png",
+      "images": [
+        "",
+        ""
+      ],
       "description": "",
       "year": 2013,
       "link": "../../src/pages/projects/projectDetails.tsx",
       "slug": "web-araex",
+      "url" : "",
       "isPrivate": false
     },
     {
       "id": 15,
       "title": "Floristeria Kimu Loradenda",
-      "category": "web-development",
-      "image": "images/web-develop/kimuloradenda/kimuloradenda-header.jpg",
+      "category": "Desarrollo web",
+      "client": "",
+      "specialty": "",
+      "technologies":[],
+      "mainImage": "images/web-develop/kimuloradenda/kimuloradenda-header.jpg",
+      "images": [
+        "",
+        ""
+      ],
       "description": "",
       "year": 2013,
       "link": "../../src/pages/projects/projectDetails.tsx",
       "slug": "floristeria-kimu-loradenda",
+      "url" : "",
       "isPrivate": true
     },
     {
       "id": 16,
       "title": "Vipernake",
-      "category": "web-development",
-      "image": "images/web-develop/vipernake/vipernake-web.jpg",
+      "category": "Desarrollo web",
+      "client": "",
+      "specialty": "",
+      "technologies":[],
+      "mainImage": "images/web-develop/vipernake/vipernake-web.jpg",
+      "images": [
+        "",
+        ""
+      ],
       "description": "",
       "year": 2021,
       "link": "../../src/pages/projects/projectDetails.tsx",
       "slug": "vipernake",
+      "url" : "",
       "isPrivate": true
     }
   ]
