--- a/vercel.json
+++ b/vercel.json
@@ -17,6 +17,11 @@
     {
       "src": "/api/(.*)",
       "dest": "/api/$1"
+    },
+    {
+      "src": "/(.*)", 
+      "dest": "/index.html"
     }
   ]
 }
+
