--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
     "@vercel/node": "^2.10.3",
-    "axios": "^1.7.7",
     "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "nodemailer": "^6.9.15",
     "react-dom": "^18.3.1",
     "react-masonry-css": "^1.0.16",
@@ -33,6 +33,7 @@
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.13",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.5.5",
     "@types/nodemailer": "^6.4.16",
     "@types/packery": "^1.4.37",
